FPGA: 1.加入了换挡机制，由galileo发送"0x11+配置总长度+配置命令"重启FPGA控制; 2.重写了中断处理流程; 3.加入LBT(listen before transmit)(利用伪随机数发生器)

--- a/fpga-si4463/Total_link/total_link.ucf
+++ b/fpga-si4463/Total_link/total_link.ucf
@@ -71,3 +71,8 @@ NET "Spi_Current_State[4]" LOC = P5;
 NET "Spi_Current_State[5]" LOC = P117;
 NET "Spi_Current_State[6]" LOC = P121;
 NET "Spi_Current_State[7]" LOC = P127;
+
+# PlanAhead Generated physical constraints 
+
+NET "debug_wire[0]" LOC = P141;
+NET "debug_wire[1]" LOC = P1;
