--- a/fpga-si4463/Total_link/total_link.ucf
+++ b/fpga-si4463/Total_link/total_link.ucf
@@ -1,77 +1,65 @@
 
-
-NET "Dout[0]" LOC = P27;
-NET "Dout[1]" LOC = P29;
-NET "Dout[2]" LOC = P30;
-NET "Dout[3]" LOC = P32;
-NET "Dout[4]" LOC = P79;
-NET "Dout[5]" LOC = P81;
-NET "Dout[6]" LOC = P80;
-NET "Dout[7]" LOC = P82;
-NET "Dout[8]" LOC = P10;
-NET "Dout[9]" LOC = P8;
-NET "Dout[10]" LOC = P9;
-NET "Dout[11]" LOC = P7;
-NET "Dout[12]" LOC = P100;
-NET "Dout[13]" LOC = P98;
-NET "Dout[14]" LOC = P99;
-NET "Dout[15]" LOC = P97;
-NET "sram_mem_addr[0]" LOC = P16;
-NET "sram_mem_addr[1]" LOC = P21;
-NET "sram_mem_addr[2]" LOC = P24;
-NET "sram_mem_addr[3]" LOC = P17;
-NET "sram_mem_addr[4]" LOC = P23;
-NET "sram_mem_addr[5]" LOC = P15;
-NET "sram_mem_addr[6]" LOC = P22;
-NET "sram_mem_addr[7]" LOC = P33;
-NET "sram_mem_addr[8]" LOC = P95;
-NET "sram_mem_addr[9]" LOC = P93;
-NET "sram_mem_addr[10]" LOC = P88;
-NET "sram_mem_addr[11]" LOC = P84;
-NET "sram_mem_addr[12]" LOC = P92;
-NET "sram_mem_addr[13]" LOC = P87;
-NET "sram_mem_addr[14]" LOC = P94;
-NET "sram_mem_addr[15]" LOC = P85;
-NET "sram_mem_addr[16]" LOC = P78;
-NET "CE_n" LOC = P26;
-NET "clk" LOC = P56;
-NET "cpu_miso" LOC = P55;
-NET "cpu_mosi" LOC = P57;
-NET "cpu_sclk" LOC = P75;
-NET "LB_n" LOC = P11;
-NET "UB_n" LOC = P12;
-NET "WE_n" LOC = P83;
-NET "OE_n" LOC = P14;
-NET "si4463_sclk" LOC = P105;
-NET "si4463_miso" LOC = P104;
-NET "si4463_mosi" LOC = P102;
-NET "si4463_ss_n" LOC = P74;
-NET "si4463_irq" LOC = P62;
-NET "si4463_reset" LOC = P119;
-NET "cpu_irq_recv" LOC = P61;
-NET "cpu_irq_full" LOC = P101;
-
-
-
-
-NET "led[1]" LOC = P126;
-NET "led[0]" LOC = P134;
-NET "led[2]" LOC = P120;
-NET "led[3]" LOC = P116;
-
-
-NET "Spi_Current_State[0]" LOC = P124;
-NET "Spi_Current_State[1]" LOC = P133;
-NET "Spi_Current_State[2]" LOC = P139;
-NET "Spi_Current_State[3]" LOC = P143;
-NET "Spi_Current_State[4]" LOC = P5;
-
-
-NET "Spi_Current_State[5]" LOC = P117;
-NET "Spi_Current_State[6]" LOC = P121;
-NET "Spi_Current_State[7]" LOC = P127;
-
 # PlanAhead Generated physical constraints 
 
-NET "debug_wire[0]" LOC = P141;
-NET "debug_wire[1]" LOC = P1;
+NET "Dout[1]" LOC = AA14;
+NET "Dout[2]" LOC = AB14;
+NET "sram_mem_addr[6]" LOC = Y18;
+NET "sram_mem_addr[9]" LOC = AB19;
+NET "sram_mem_addr[7]" LOC = AA18;
+NET "sram_mem_addr[8]" LOC = AB18;
+NET "WE_n" LOC = Y17;
+NET "sram_mem_addr[5]" LOC = AB17;
+NET "Dout[5]" LOC = Y16;
+NET "Dout[6]" LOC = AA16;
+NET "Dout[7]" LOC = AB16;
+NET "Dout[0]" LOC = Y14;
+NET "Dout[3]" LOC = Y15;
+NET "Dout[4]" LOC = AB15;
+NET "sram_mem_addr[4]" LOC = Y13;
+NET "CE_n" LOC = AB13;
+NET "sram_mem_addr[2]" LOC = AA12;
+NET "sram_mem_addr[3]" LOC = AB12;
+NET "sram_mem_addr[10]" LOC = Y11;
+NET "sram_mem_addr[0]" LOC = AB11;
+NET "sram_mem_addr[1]" LOC = Y12;
+NET "sram_mem_addr[11]" LOC = AB10;
+NET "sram_mem_addr[12]" LOC = AA10;
+NET "Dout[8]" LOC = Y9;
+NET "sram_mem_addr[14]" LOC = AB9;
+NET "sram_mem_addr[13]" LOC = Y10;
+NET "Dout[10]" LOC = AA8;
+NET "Dout[9]" LOC = AB8;
+NET "Dout[13]" LOC = Y7;
+NET "Dout[12]" LOC = AB7;
+NET "Dout[11]" LOC = Y8;
+NET "Dout[15]" LOC = AA6;
+NET "Dout[14]" LOC = AB6;
+NET "LB_n" LOC = Y6;
+NET "OE_n" LOC = Y5;
+NET "UB_n" LOC = AB5;
+NET "debug_wire[0]" LOC = E1;
+NET "Spi_Current_State[0]" LOC = C1;
+NET "Spi_Current_State[1]" LOC = D2;
+NET "Spi_Current_State[2]" LOC = F1;
+NET "Spi_Current_State[3]" LOC = G1;
+NET "Spi_Current_State[5]" LOC = K2;
+NET "Spi_Current_State[6]" LOC = F2;
+NET "Spi_Current_State[7]" LOC = H1;
+NET "led[0]" LOC = M1;
+NET "led[1]" LOC = N1;
+NET "led[2]" LOC = P1;
+NET "led[3]" LOC = P2;
+NET "sram_mem_addr[16]" LOC = AA4;
+NET "sram_mem_addr[15]" LOC = AB4;
+NET "clk" LOC = L1;
+NET "cpu_irq_full" LOC = J22;
+NET "cpu_irq_recv" LOC = P22;
+NET "cpu_mosi" LOC = U22;
+NET "cpu_miso" LOC = V22;
+NET "cpu_sclk" LOC = W22;
+NET "si4463_irq" LOC = M22;
+NET "si4463_sclk" LOC = G22;
+NET "si4463_mosi" LOC = H21;
+NET "si4463_miso" LOC = H22;
+NET "si4463_reset" LOC = L22;
+NET "si4463_ss_n" LOC = K21;
