Bug fixed and New features. FPGA: 1. 将gpio1配置成cca，提升载波监听性能 	1. 手动添加MODEM_RSSI_THRESH的配置 	2. 手动添加gpio1的配置（修改自动生成的config文件） 	3. 【需要把IO9弄折】 	4. 监听时间为1ms 2. 在SRAM读写后加了一个等待周期，解决了SRAM读数据拖后一个地址周期的问题！ 3. 删掉了virtual_debugIO，发现这种悬空的Pin会导致异常情况出现（有一次发现没有赋值的LED不停闪烁，删掉后消失）。之前出现的发送启动配置没响应的问题也是由2.引发的（并不是每个版本都有，估计和综合后的速度等级有关）
I2CGPS:
1. 从802.11的Debugfs中获取rssi（SNR）信息，参考了[1]；
2. 修正了RF LOG文件编号错误的问题；
3. 修改了载波监听后，5%的丢包现象没有了。

[1] http://comments.gmane.org/gmane.linux.drivers.ath9k.devel/6100
看到有个“rs_rssi”，并且相关的是config_mac80211_debugfs定义的“last_signal”

--- a/fpga-si4463/Total_link/total_link.ucf
+++ b/fpga-si4463/Total_link/total_link.ucf
@@ -65,5 +65,6 @@ NET "si4463_mosi" LOC = H21;
 NET "si4463_miso" LOC = H22;
 NET "si4463_reset" LOC = L22;
 NET "si4463_ss_n" LOC = K21;
+NET "si4463_gpio1" LOC = K22;
 
 
