I2CGPS: Bug fixed and new features. 1. 解决了sub1GHz场强恒定的问题； 2. 加入了能耗，速率的调整； 3. 加入了Debug模式：不需要等GPS校准

--- a/i2c-gps/Makefile
+++ b/i2c-gps/Makefile
@@ -1,5 +1,6 @@
 
-CFLAGS += 
+CFLAGS +=
+#CFLAGS += -DDEBUG
 
 default: i2c-gps.o main.o Ublox.o
 	${CXX} ${CFLAGS} i2c-gps.o Ublox.o main.o -o gpstester  -lpthread
