I2CGPS:新增GPS测试模块，加入了GNSS的初始化以及GPS工作模式的调整。  1. GPS测试模块编译使用make gps_test  2. GNSS初始化加入了GLONASS和SBAS  3. GPS工作模式使用-P选项进行调整

--- a/i2c-gps/Makefile
+++ b/i2c-gps/Makefile
@@ -10,6 +10,17 @@ Ublox.o:
 	${CXX} ${CFLAGS} -c Ublox.cpp
 main.o:
 	${CXX} ${CFLAGS} -c main.cpp
+
+gps_test: i2c-gps.o gps_valid_tester.o Ublox.o
+	${CXX} ${CFLAGS} i2c-gps.o Ublox.o gps_valid_tester.o -o gps_valid_tester  -lpthread
+i2c-gps.o:
+	${CXX} ${CFLAGS} -c i2c-gps.cpp
+Ublox.o:
+	${CXX} ${CFLAGS} -c Ublox.cpp
+gps_valid_tester.o:
+	${CXX} ${CFLAGS} -c gps_valid_tester.cpp
+	
 clean:
 	rm -rf *.o
 	rm -rf gpstester
+	rm -rf gps_valid_tester
