GPS: 加入了串口取GPS数据的支持，以此修正了时间解析出错的问题（之前发现i2c取出的GPS数据在解码时会有checksum出错的问题，并且时间偶尔会混乱）。

--- a/i2c-gps/Makefile
+++ b/i2c-gps/Makefile
@@ -2,19 +2,17 @@
 CFLAGS += 
 #CFLAGS += -DDEBUG
 
-default: i2c-gps.o main.o Ublox.o
-	${CXX} ${CFLAGS} i2c-gps.o Ublox.o main.o -o gpstester  -lpthread
-i2c-gps.o:
-	${CXX} ${CFLAGS} -c i2c-gps.cpp
-Ublox.o:
-	${CXX} ${CFLAGS} -c Ublox.cpp
+default: i2c-gps.o serial-gps.o main.o Ublox.o
+	${CXX} ${CFLAGS} i2c-gps.o serial-gps.o Ublox.o main.o -o gpstester  -lpthread
 main.o:
 	${CXX} ${CFLAGS} -c main.cpp
 
-gps_test: i2c-gps.o gps_valid_tester.o Ublox.o
-	${CXX} ${CFLAGS} i2c-gps.o Ublox.o gps_valid_tester.o -o gps_valid_tester  -lpthread
+gps_test: i2c-gps.o serial-gps.o gps_valid_tester.o Ublox.o
+	${CXX} ${CFLAGS} i2c-gps.o serial-gps.o Ublox.o gps_valid_tester.o -o gps_valid_tester  -lpthread
 i2c-gps.o:
 	${CXX} ${CFLAGS} -c i2c-gps.cpp
+serial-gps.o:
+	${CXX} ${CFLAGS} -c serial-gps.cpp
 Ublox.o:
 	${CXX} ${CFLAGS} -c Ublox.cpp
 gps_valid_tester.o:
